--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
+    "react-window": "^1.8.7",
     "spinner": "^0.3.4",
     "web-vitals": "^2.1.4"
   },
