--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "githubfinder",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "18.20.5"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -13,10 +10,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-spinners": "^0.13.4",
     "react-window": "^1.8.7",
-    "spinner": "^0.3.4",
+    "spinner": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
