--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "githubfinder",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.5.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
